<resources>
    <string name="server_url">http://ip.jordyf.me</string>

    <!--UNCOMMENT FOR RELEASE-->
    <!--<string name="banner1"> ca-app-pub-8011185401618701/3298549871</string>-->
    <!--<string name="banner2"> ca-app-pub-8011185401618701/3158949078</string>-->
    <!--<string name="banner3"> ca-app-pub-8011185401618701/1505589072</string>-->

    <!-- FOR TESTING -->
    <string name="banner1"> ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner2"> ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner3"> ca-app-pub-3940256099942544/6300978111</string>

    <!--NORMAL FROM HERE ON-->
    <string name="app_name">IP</string>
    <string name="ip_text">Loading…</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="error_string">I couldn\'t get your ip.</string>
    <string name="show_notifications">Show notifications when IP changes</string>
    <string name="your_ip">Your IP is:</string>
    <string name="wifi_needed">You need an active Wifi connection to use this service.</string>
    <string name="new_ip">Your new IP:</string>
    <string name="click_here">Click here to copy or share</string>
    <string name="today">Today</string>
    <string name="ok">Ok</string>
    <string name="not">Not</string>
    <string name="no">No</string>
    <string name="yes">Yes </string>
    <string name="sure_delete">Are you sure?</string>
    <string name="text_copied">Text Copied!</string>
</resources>
