<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jordyf.com.br.ip.activity.MainActivity"
    android:background="#1a237e">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent"
        >
        <!--<com.google.android.gms.ads.AdView-->
            <!--android:id="@+id/adView2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--ads:adSize="BANNER"-->
            <!--ads:adUnitId="@string/banner1">-->
        <!--</com.google.android.gms.ads.AdView>-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/your_ip"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout

            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:id="@+id/text_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_text" />
            <ImageButton
                style="@style/Widget.AppCompat.Button.Small"
                android:background="@null"
                android:layout_gravity="end"
                android:src="@drawable/ic_replay_white_24dp"
                android:id="@+id/reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:src="@drawable/ic_share_white_24dp"
                android:text="@string/share"
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:src="@drawable/ic_content_copy_white_24dp"
                android:text="@string/copy"
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:checked="true"
                android:textColor="@color/white"
                android:text="@string/show_notifications"
                android:id="@+id/check_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="320dp"
            android:layout_height="100dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/banner2">
        </com.google.android.gms.ads.AdView>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView3"
            android:layout_width="320dp"
            android:layout_height="100dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/banner3">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
